<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationBankActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextLoginBankRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/registrationUserActivityEditTextLogin"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextPasswordBankRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/registrationUserActivityEditTextPassword"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextAboutBankRegistration"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/registrationBankActivityEditTextAboutBank"
            android:inputType="textPersonName"
            android:singleLine="false" />

        <EditText
            android:id="@+id/editTextNameBankRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/registrationBankActivityEditTextNameOfBak"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonBankRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@color/backgroundColorBtn"
            android:onClick="btnBankRegistrationClick"
            android:text="@string/registrationUserActivityButtonOK" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>