<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BankSignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:srcCompat="@drawable/plant64" />

        <EditText
            android:id="@+id/editTextLoginBank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/userSignInActivityEditTextLogin"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextPasswordBank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/userSignInActivityEditTextPassword"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnBankSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="30dp"
            android:background="@color/backgroundColorBtn"
            android:onClick="btnBankSignInClick"
            android:text="@string/userSignInActivityBtn" />

        <TextView
            android:id="@+id/textViewBankRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="@string/userSignInActivityLabel" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>