<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFillActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextCreditAmountProfileFillActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/profileFillActivityEditTextCreditAmount"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextEMailProfileFillActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/profileFillActivityEditTextEMail"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextTelephoneNumberProfileFillActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/profileFillActivityEditTextTelephoneNumber"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/spinnerCityProfileFillActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@color/backgroundColorBtn"
            android:onClick="btnOkFillActivity"
            android:text="@string/profileFillActivityButtonOK" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>